[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://audio/sfx/ButtonPressed.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/sfx/ButtonReleased.wav" type="AudioStream" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.172549, 0.172549, 0.172549, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.345101, 1 )

[node name="Button" type="Area"]
script = ExtResource( 1 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 0.8, 0, 0, 0, 0.209, 0, 0, 0, 0.81, 0, -0.524496, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="Bottom" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, -0.8, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.653849, 0 )
shape = SubResource( 3 )

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ButtonReleased" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Button_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Button_area_exited"]
